--- a/HW/api_openWeather/style.css
+++ b/HW/api_openWeather/style.css
@@ -1,9 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  text-align: center;
 }
 .container {
-  display: block;
+  /* position: absolute; */
   width: 100%;
 }
